--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^5.13.14",
@@ -25,5 +26,4 @@
     "stripe": "^8.144.0",
     "uuid": "^8.3.2"
   }
-
 }
